feat: add indexers

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/indexerdb"
 AUTH_TOKEN=dna_xxx
+STREAM_URL=https://sepolia.starknet.a5a.ch
+STARTING_BLOCK=191606
