--- a/deno.json
+++ b/deno.json
@@ -4,8 +4,10 @@
     "index:deposit": "apibara run src/indexers/deposits.ts --allow-env .env"
   },
   "imports": {
+    "@apibara/indexer": "npm:@apibara/indexer@0.4.1",
     "@std/assert": "jsr:@std/assert@1",
-    "prisma": "npm:prisma@^5.22.0"
+    "prisma": "npm:prisma@^5.22.0",
+    "starknet": "npm:starknet@6.11.0"
   },
   "nodeModulesDir": "auto"
 }
