feat: update structure,classes

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,8 @@ DATABASE_URL="postgresql://postgres:postgres@localhost:5432/indexerdb"
 AUTH_TOKEN=dna_xxx
 STREAM_URL=https://sepolia.starknet.a5a.ch
 STARTING_BLOCK=191606
+
+# blastapi public rpc starknet-sepolia
+RPC_URL="https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
+PRIVATE_KEY=""
+ACCOUNT_ADDRESS=""
