--- a/.env.sample
+++ b/.env.sample
@@ -4,11 +4,17 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/indexerdb"
-AUTH_TOKEN=dna_xxx
-STREAM_URL=https://sepolia.starknet.a5a.ch
-STARTING_BLOCK=191606
 
-# blastapi public rpc starknet-sepolia
-RPC_URL="https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
+################ Apibara indexer config ###############
+AUTH_TOKEN=dna_xxx    # Apibara dna api key
+STARTING_BLOCK=191606 # Starting block to index from
+STREAM_URL=https://sepolia.starknet.a5a.ch # Stream url for the indexer(can self host too)
+
+############## Admin Account Details #############
 PRIVATE_KEY=""
 ACCOUNT_ADDRESS=""
+
+########### Network configurations ############
+# blastapi public rpc starknet-sepolia
+RPC_URL="https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
+Network="" # "sepolia" | "mainnet"
