--- a/deno.json
+++ b/deno.json
@@ -5,8 +5,8 @@
   },
   "imports": {
     "@apibara/indexer": "npm:@apibara/indexer@0.4.1",
+    "@prisma/client": "npm:@prisma/client@^5.22.0",
     "@std/assert": "jsr:@std/assert@^1.0.8",
-    "prisma": "npm:prisma@^5.22.0",
     "starknet": "npm:starknet@6.11.0"
   },
   "nodeModulesDir": "auto"
