--- a/deno.json
+++ b/deno.json
@@ -7,6 +7,7 @@
     "@apibara/indexer": "npm:@apibara/indexer@0.4.1",
     "@prisma/client": "npm:@prisma/client@^5.22.0",
     "@std/assert": "jsr:@std/assert@^1.0.8",
+    "prisma": "npm:prisma@^5.22.0",
     "starknet": "npm:starknet@6.11.0"
   },
   "nodeModulesDir": "auto"
