--- a/.env.sample
+++ b/.env.sample
@@ -10,6 +10,9 @@ AUTH_TOKEN=dna_xxx    # Apibara dna api key
 STARTING_BLOCK=191606 # Starting block to index from
 STREAM_URL=https://sepolia.starknet.a5a.ch # Stream url for the indexer(can self host too)
 
+# optional and useful for local development
+PERSIST_TO_FS="" # /Users/vt/STRKFarm/ind-state
+
 ############## Admin Account Details #############
 PRIVATE_KEY=""
 ACCOUNT_ADDRESS=""
