--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "devDependencies": {
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "typescript": "5.4.5",
+    "typescript-eslint": "7.6.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
-    "typegraphql-prisma": "^0.28.0"
+    "@apibara/protocol": "0.4.9",
+    "@apibara/starknet": "0.4.0",
+    "@apollo/server": "4.11.0",
+    "@prisma/client": "5.22.0",
+    "express": "^4.21.1",
+    "graphql": "16.9.0",
+    "graphql-fields": "2.0.3",
+    "graphql-scalars": "1.23.0",
+    "tslib": "2.8.1",
+    "type-graphql": "2.0.0-rc.2",
+    "typegraphql-prisma": "0.28.0"
   },
   "name": "relayer",
   "version": "1.0.0",
