--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql": "16.9.0",
     "graphql-fields": "2.0.3",
     "graphql-scalars": "1.23.0",
+    "reflect-metadata": "^0.2.2",
     "tslib": "2.8.1",
     "type-graphql": "2.0.0-rc.2",
     "typegraphql-prisma": "0.28.0"
