--- a/deno.json
+++ b/deno.json
@@ -1,14 +1,22 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts",
-    "index:deposit": "apibara run src/indexers/deposits.ts --allow-env .env"
+    "dev": "deno run --watch --allow-ffi --allow-read --allow-env --allow-net src/relayer/main.ts PORT=4455",
+    "index": "sh ./run-indexers.sh"
   },
   "imports": {
     "@apibara/indexer": "npm:@apibara/indexer@0.4.1",
+    "@nestjs/common": "npm:@nestjs/common@^10.4.8",
+    "@nestjs/core": "npm:@nestjs/core@^10.4.8",
+    "@nestjs/platform-express": "npm:@nestjs/platform-express@^10.4.8",
+    "@nestjs/testing": "npm:@nestjs/testing@^10.4.8",
     "@prisma/client": "npm:@prisma/client@^5.22.0",
     "@std/assert": "jsr:@std/assert@^1.0.8",
     "prisma": "npm:prisma@^5.22.0",
     "starknet": "npm:starknet@6.11.0"
   },
-  "nodeModulesDir": "auto"
+  "nodeModulesDir": "auto",
+  "compilerOptions": {
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
+  }
 }
