--- a/.env.sample
+++ b/.env.sample
@@ -10,8 +10,6 @@ AUTH_TOKEN=dna_xxx    # Apibara dna api key
 STARTING_BLOCK=191606 # Starting block to index from
 STREAM_URL=https://sepolia.starknet.a5a.ch # Stream url for the indexer(can self host too)
 
-# optional and useful for local development
-PERSIST_TO_FS="" # /Users/vt/STRKFarm/ind-state
 
 ############## Admin Account Details #############
 PRIVATE_KEY=""
@@ -21,3 +19,8 @@ ACCOUNT_ADDRESS=""
 # blastapi public rpc starknet-sepolia
 RPC_URL="https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
 Network="" # "sepolia" | "mainnet"
+
+
+############# Optional(For local development/debugging) ###########
+NEST_DEBUG=true
+PERSIST_TO_FS="" # /Users/vt/STRKFarm/ind-state
