--- a/deno.json
+++ b/deno.json
@@ -5,18 +5,21 @@
   },
   "imports": {
     "@apibara/indexer": "npm:@apibara/indexer@0.4.1",
-    "@nestjs/common": "npm:@nestjs/common@^10.4.8",
-    "@nestjs/core": "npm:@nestjs/core@^10.4.8",
-    "@nestjs/platform-express": "npm:@nestjs/platform-express@^10.4.8",
-    "@nestjs/testing": "npm:@nestjs/testing@^10.4.8",
-    "@prisma/client": "npm:@prisma/client@^5.22.0",
-    "@std/assert": "jsr:@std/assert@^1.0.8",
-    "prisma": "npm:prisma@^5.22.0",
-    "starknet": "npm:starknet@6.11.0"
+    "@nestjs/common": "npm:@nestjs/common@10.4.1",
+    "@nestjs/core": "npm:@nestjs/core@10.4.1",
+    "@nestjs/platform-express": "npm:@nestjs/platform-express@10.4.1",
+    "@nestjs/testing": "npm:@nestjs/testing@10.4.1",
+    "@prisma/client": "npm:@prisma/client@5.22.0",
+    "@nestjs/schedule": "npm:@nestjs/schedule@4.1.1",
+    "@std/assert": "jsr:@std/assert@1.0.8",
+    "prisma": "npm:prisma@5.22.0",
+    "starknet": "npm:starknet@6.11.0",
+    "strkfarm-sdk/": "https://raw.githubusercontent.com/strkfarm/sdk-ts/main/"
   },
   "nodeModulesDir": "auto",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "allowJs": true
   }
 }
