fix apibara start bug

--- a/deno.json
+++ b/deno.json
@@ -13,13 +13,11 @@
     "@nestjs/schedule": "npm:@nestjs/schedule@4.1.1",
     "@std/assert": "jsr:@std/assert@1.0.8",
     "prisma": "npm:prisma@5.22.0",
-    "starknet": "npm:starknet@6.11.0",
-    "strkfarm-sdk/": "https://raw.githubusercontent.com/strkfarm/sdk-ts/main/"
+    "starknet": "npm:starknet@6.11.0"
   },
   "nodeModulesDir": "auto",
   "compilerOptions": {
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowJs": true
+    "experimentalDecorators": true
   }
 }
