add wq cron and relayer docker

--- a/.env.sample
+++ b/.env.sample
@@ -24,3 +24,6 @@ Network="" # "sepolia" | "mainnet"
 ############# Optional(For local development/debugging) ###########
 NEST_DEBUG=true
 PERSIST_TO_FS="" # /Users/vt/STRKFarm/ind-state
+
+##### Notification Configurations #####
+TG_TOKEN=
