setup relayer deployment [11]

--- a/deployment/supervisord.relayer.conf
+++ b/deployment/supervisord.relayer.conf
@@ -3,7 +3,7 @@
 # All sink ids for LST project to start from 10000
 
 [program:process1]
-command=/root/.deno/bin/deno run prod
+command=echo "Hello World"
 directory=/app
 autostart=true
 autorestart=true
