setup relayer deployment [13]

--- a/deployment/supervisord.relayer.conf
+++ b/deployment/supervisord.relayer.conf
@@ -3,7 +3,7 @@
 # All sink ids for LST project to start from 10000
 
 [program:process1]
-command=echo "Hello World"
+command=/root/.deno/bin/deno run prod
 directory=/app
 autostart=true
 autorestart=true
