add mainnet sink id

--- a/deployment/supervisord.conf
+++ b/deployment/supervisord.conf
@@ -2,8 +2,10 @@
 
 # All sink ids for LST project to start from 10000
 
+# sink i 20000+ for mainnet
+# sink id 10000+ for testnet
 [program:process1]
-command=/root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/withdraw_queue/withdrawQueue.ts --sink-id=10045 --status-server-address=0.0.0.0:4140
+command=/root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/withdraw_queue/withdrawQueue.ts --sink-id=20040 --status-server-address=0.0.0.0:4140
 directory=/app
 autostart=true
 autorestart=true
