--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "@apibara/protocol": "0.4.9",
     "@apibara/starknet": "0.4.0",
     "@apollo/server": "4.11.0",
+    "@nestjs/common": "10.4.1",
+    "@nestjs/core": "10.4.1",
+    "@nestjs/platform-express": "10.4.1",
+    "@nestjs/schedule": "4.1.1",
     "@prisma/client": "5.22.0",
+    "@strkfarm/sdk": "^1.0.7",
+    "assert": "^2.1.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "graphql": "16.9.0",
     "graphql-fields": "2.0.3",
     "graphql-scalars": "1.23.0",
     "reflect-metadata": "^0.2.2",
+    "starknet": "^6.11.0",
     "tslib": "2.8.1",
     "type-graphql": "2.0.0-rc.2",
     "typegraphql-prisma": "0.28.0"
