--- a/deployment/supervisord.conf
+++ b/deployment/supervisord.conf
@@ -4,13 +4,13 @@
 
 # sink i 20000+ for mainnet
 # sink id 10000+ for testnet
-[program:process1]
-command=/root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/withdraw_queue/withdrawQueue.ts --sink-id=20041 --status-server-address=0.0.0.0:4140
-directory=/app
-autostart=true
-autorestart=true
-stdout_logfile=/var/log/supervisor/withdraw_queue.log
-stderr_logfile=/var/log/supervisor/withdraw_queue_err.log
+# [program:process1]
+# command=/root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/withdraw_queue/withdrawQueue.ts --sink-id=20041 --status-server-address=0.0.0.0:4140
+# directory=/app
+# autostart=true
+# autorestart=true
+# stdout_logfile=/var/log/supervisor/withdraw_queue.log
+# stderr_logfile=/var/log/supervisor/withdraw_queue_err.log
 
 [program:process2]
 command=npx -y ts-node src/relayer/main.ts
