--- a/deployment/supervisord.conf
+++ b/deployment/supervisord.conf
@@ -12,10 +12,10 @@ autorestart=true
 stdout_logfile=/var/log/supervisor/withdraw_queue.log
 stderr_logfile=/var/log/supervisor/withdraw_queue_err.log
 
-[program:process2]
-command=npx -y ts-node src/relayer/main.ts
-directory=/app
-autostart=true
-autorestart=true
-stdout_logfile=/var/log/supervisor/relayer.log
-stderr_logfile=/var/log/supervisor/relayer_err.log
+# [program:process2]
+# command=npx -y ts-node src/relayer/main.ts
+# directory=/app
+# autostart=true
+# autorestart=true
+# stdout_logfile=/var/log/supervisor/relayer.log
+# stderr_logfile=/var/log/supervisor/relayer_err.log
