--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@apibara/protocol": "0.4.9",
     "@apibara/starknet": "0.4.0",
     "@apollo/server": "4.11.0",
+    "@avnu/avnu-sdk": "^3.0.0",
     "@nestjs/common": "10.4.1",
     "@nestjs/core": "10.4.1",
     "@nestjs/platform-express": "10.4.1",
