--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "5.22.0",
     "@strkfarm/sdk": "^1.0.7",
     "assert": "^2.1.0",
+    "bignumber.js": "^9.1.2",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "express": "^4.21.1",
@@ -33,7 +34,8 @@
   "description": "### Run withdraw queue indexer `apibara run src/indexers/withdraw_queue/withdrawQueue.ts --allow-env=.env --sink-id 10`",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:withdraw_queue:indexer": "apibara run src/indexers/withdraw_queue/withdrawQueue.ts -A dna_xxx"
   },
   "author": "akiraonstarknet",
   "license": "ISC"
