--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@nestjs/platform-express": "10.4.1",
     "@nestjs/schedule": "4.1.1",
     "@prisma/client": "5.22.0",
-    "@strkfarm/sdk": "^1.0.7",
+    "@strkfarm/sdk": "1.0.7",
     "assert": "^2.1.0",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "express": "^4.21.1",
     "graphql": "16.9.0",
     "graphql-fields": "2.0.3",
     "graphql-scalars": "1.23.0",
+    "p-limit": "^6.2.0",
     "reflect-metadata": "^0.2.2",
     "starknet": "^6.11.0",
     "tslib": "2.8.1",
