--- a/package.json
+++ b/package.json
@@ -1,6 +1,19 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-typescript": "^7.27.1",
+    "@jest/globals": "^29.7.0",
+    "@jest/types": "^29.6.3",
+    "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "npm": "^11.3.0",
     "prisma": "^5.22.0",
+    "ts-jest": "^29.3.2",
     "typescript": "5.4.5",
     "typescript-eslint": "7.6.0"
   },
@@ -23,9 +36,10 @@
     "graphql": "16.9.0",
     "graphql-fields": "2.0.3",
     "graphql-scalars": "1.23.0",
-    "p-limit": "^6.2.0",
+    "p-limit": "^3.1.0",
     "reflect-metadata": "^0.2.2",
     "starknet": "^6.11.0",
+    "ts-node": "^10.9.2",
     "tslib": "2.8.1",
     "type-graphql": "2.0.0-rc.2",
     "typegraphql-prisma": "0.28.0"
@@ -34,9 +48,6 @@
   "version": "1.0.0",
   "description": "### Run withdraw queue indexer `apibara run src/indexers/withdraw_queue/withdrawQueue.ts --allow-env=.env --sink-id 10`",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "akiraonstarknet",
   "license": "ISC"
 }
