--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
@@ -8,10 +9,12 @@
     "@babel/preset-typescript": "^7.27.1",
     "@jest/globals": "^29.7.0",
     "@jest/types": "^29.6.3",
+    "@nestjs/testing": "^11.1.1",
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "npm": "^11.3.0",
+    "prettier": "^3.5.3",
     "prisma": "^5.22.0",
     "ts-jest": "^29.3.2",
     "typescript": "5.4.5",
