--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "scripts": {
     "test": "jest",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "bonus-early:summary": "tsx src/points-system/standalone-scripts/early-user-bonus-script.ts --summary-only",
+    "bonus-early:dry": "tsx src/points-system/standalone-scripts/early-user-bonus-script.ts --dry-run",
+    "bonus-six:summary": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --summary-only",
+    "bonus-six:dry": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --dry-run"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
