--- a/deployment/supervisord.conf
+++ b/deployment/supervisord.conf
@@ -12,6 +12,22 @@ autorestart=true
 stdout_logfile=/var/log/supervisor/withdraw_queue.log
 stderr_logfile=/var/log/supervisor/withdraw_queue_err.log
 
+[program:process1]
+command=/bin/bash -c 'source ~/.bashrc && cd /app && /root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/lst/blocks.ts --sink-id=relayer::blocks --status-server-address=0.0.0.0:4150'
+directory=/app
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/supervisor/blocks.log
+stderr_logfile=/var/log/supervisor/blocks_err.log
+
+[program:process1]
+command=/bin/bash -c 'source ~/.bashrc && cd /app && /root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/lst/users.ts --sink-id=relayer::users --status-server-address=0.0.0.0:4160'
+directory=/app
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/supervisor/users.log
+stderr_logfile=/var/log/supervisor/users_err.log
+
 # [program:process2]
 # command=npx -y ts-node src/relayer/main.ts
 # directory=/app
