--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "bonus-early:summary": "tsx src/points-system/standalone-scripts/early-user-bonus-script.ts --summary-only",
     "bonus-early:dry": "tsx src/points-system/standalone-scripts/early-user-bonus-script.ts --dry-run",
     "bonus-six:summary": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --summary-only",
-    "bonus-six:dry": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --dry-run"
+    "bonus-six:dry": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --dry-run",
+    "amount:allocate": "tsx src/points-system/standalone-scripts/allocate-amount.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
