--- a/deployment/supervisord.conf
+++ b/deployment/supervisord.conf
@@ -28,6 +28,14 @@ autorestart=true
 stdout_logfile=/var/log/supervisor/users.log
 stderr_logfile=/var/log/supervisor/users_err.log
 
+[program:process4]
+command=/bin/bash -c 'source ~/.bashrc && cd /app && /root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/lst/depositWithReferral.ts --sink-id=relayer::depositWithReferral --status-server-address=0.0.0.0:4170'
+directory=/app
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/supervisor/depositWithReferral.log
+stderr_logfile=/var/log/supervisor/depositWithReferral_err.log
+
 # [program:process2]
 # command=npx -y ts-node src/relayer/main.ts
 # directory=/app
