Feat/points system (#5)
* chore: added allocate amount script

* add deposit with referral indexer

* chore: added referral bonus script

* chore: mini clean

---------

Co-authored-by: Hemant <hrsmart2150@gmail.com>

--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
     "bonus-early:summary": "tsx src/points-system/standalone-scripts/early-user-bonus-script.ts --summary-only",
     "bonus-early:dry": "tsx src/points-system/standalone-scripts/early-user-bonus-script.ts --dry-run",
     "bonus-six:summary": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --summary-only",
-    "bonus-six:dry": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --dry-run"
+    "amount:allocate": "tsx src/points-system/standalone-scripts/allocate-amount.ts",
+    "bonus-six:dry": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --dry-run",
+    "bonus-referral:dry": "tsx src/points-system/standalone-scripts/refrees-script.ts --dry-run",
+    "bonus-referral:summary": "tsx src/points-system/standalone-scripts/refrees-script.ts --dry-summary"
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
