--- a/package.json
+++ b/package.json
@@ -40,15 +40,16 @@
     "@strkfarm/sdk": "1.0.7",
     "assert": "^2.1.0",
     "axios": "^1.9.0",
+    "bignumber.js": "^9.3.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
     "express": "^4.21.1",
     "graphql": "16.9.0",
     "graphql-fields": "2.0.3",
     "graphql-scalars": "1.23.0",
+    "p-limit": "^3.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "p-limit": "^3.1.0",
     "reflect-metadata": "^0.2.2",
     "starknet": "^6.11.0",
     "ts-node": "^10.9.2",
