--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "emitDecoratorMetadata": true,
     "moduleResolution": "node",
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
