--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@nestjs/platform-express": "10.4.1",
     "@nestjs/schedule": "4.1.1",
     "@prisma/client": "5.22.0",
-    "@strkfarm/sdk": "1.0.7",
+    "@strkfarm/sdk": "^1.0.44",
     "assert": "^2.1.0",
     "axios": "^1.9.0",
     "bignumber.js": "^9.3.0",
