--- a/deployment/supervisord.conf
+++ b/deployment/supervisord.conf
@@ -29,7 +29,7 @@ stdout_logfile=/var/log/supervisor/users.log
 stderr_logfile=/var/log/supervisor/users_err.log
 
 [program:process4]
-command=/bin/bash -c 'source ~/.bashrc && cd /app && /root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/lst/depositWithReferral.ts --sink-id=relayer::depositWithReferral2 --status-server-address=0.0.0.0:4170'
+command=/bin/bash -c 'source ~/.bashrc && cd /app && /root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/lst/depositWithReferral.ts --sink-id=relayer::depositWithReferral --status-server-address=0.0.0.0:4170'
 directory=/app
 autostart=true
 autorestart=true
