--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "graphql": "16.9.0",
     "graphql-fields": "2.0.3",
     "graphql-scalars": "1.23.0",
+    "moment": "^2.30.1",
     "p-limit": "^3.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
