add ekubo positions indexers

--- a/deployment/supervisord.conf
+++ b/deployment/supervisord.conf
@@ -36,10 +36,18 @@ autorestart=true
 stdout_logfile=/var/log/supervisor/depositWithReferral.log
 stderr_logfile=/var/log/supervisor/depositWithReferral_err.log
 
-# [program:process2]
-# command=npx -y ts-node src/relayer/main.ts
-# directory=/app
-# autostart=true
-# autorestart=true
-# stdout_logfile=/var/log/supervisor/relayer.log
-# stderr_logfile=/var/log/supervisor/relayer_err.log
+[program:process5]
+command=/bin/bash -c 'source ~/.bashrc && cd /app && /root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/external/ekubo.positions.ts --sink-id=relayer::ekubo::positions --status-server-address=0.0.0.0:4180'
+directory=/app
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/supervisor/ekubo_positions.log
+stderr_logfile=/var/log/supervisor/ekubo_positions_err.log
+
+[program:process6]
+command=/bin/bash -c 'source ~/.bashrc && cd /app && /root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/external/ekubo.nfts.ts --sink-id=relayer::ekubo::nfts --status-server-address=0.0.0.0:4190'
+directory=/app
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/supervisor/ekubo_nfts.log
+stderr_logfile=/var/log/supervisor/ekubo_nfts_err.log
