--- a/.env.sample
+++ b/.env.sample
@@ -27,3 +27,14 @@ PERSIST_TO_FS="" # /Users/vt/STRKFarm/ind-state
 
 ##### Notification Configurations #####
 TG_TOKEN=
+
+ACCOUNT_SECURE_PASSWORD=
+ACCOUNT_KEY=
+
+
+
+USE_BOT_API_FOR_TESTING=true
+BOT_API_BASE_URL=http://localhost:3000
+BOT_SECRET_KEY=
+
+RELAYER_PORT=3080
