--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
   "semi": true,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 100,
   "tabWidth": 2,
-  "arrowParens": "always"
+  "printWidth": 80,
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
