--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "scripts": {
     "test": "jest",
     "test:weekly": "npm test src/tests/weekly-points.service.spec.ts",
-    "format": "prettier --write .",
     "bonus-early:summary": "tsx src/points-system/standalone-scripts/early-user-bonus-script.ts --summary-only",
     "bonus-early:dry": "tsx src/points-system/standalone-scripts/early-user-bonus-script.ts --dry-run",
     "bonus-six:summary": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --summary-only",
@@ -10,7 +9,11 @@
     "bonus-six:dry": "tsx src/points-system/standalone-scripts/six-month-bonus-script.ts --dry-run",
     "bonus-referral:dry": "tsx src/points-system/standalone-scripts/refrees-script.ts --dry-run",
     "bonus-referral:summary": "tsx src/points-system/standalone-scripts/refrees-script.ts --dry-summary",
-    "generate-proofs": "tsx src/points-system/standalone-scripts/generate-proofs.ts"
+    "generate-proofs": "tsx src/points-system/standalone-scripts/generate-proofs.ts",
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "format": "prettier --write \"**/*.{ts,js,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,js,json,md}\""
   },
   "devDependencies": {
     "@babel/core": "^7.27.1",
@@ -20,7 +23,12 @@
     "@jest/types": "^29.6.3",
     "@nestjs/testing": "^11.1.1",
     "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
     "babel-jest": "^29.7.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.32.0",
     "jest": "^29.7.0",
     "npm": "^11.3.0",
     "prettier": "^3.5.3",
