--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@apibara/protocol": "0.4.9",
     "@apibara/starknet": "0.4.0",
+    "@apollo/client": "^3.13.8",
     "@apollo/server": "4.11.0",
     "@avnu/avnu-sdk": "^3.0.0",
     "@nestjs/common": "10.4.1",
