fix withdraq queue indexer

--- a/deployment/supervisord.conf
+++ b/deployment/supervisord.conf
@@ -5,7 +5,7 @@
 # sink i 20000+ for mainnet
 # sink id 10000+ for testnet
 [program:process1]
-command=/bin/bash -c 'source ~/.bashrc && cd /app && /root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/withdraw_queue/withdrawQueue.ts --sink-id=$(expr $SINK_ID + 1) --status-server-address=0.0.0.0:4140'
+command=/bin/bash -c 'source ~/.bashrc && cd /app && /root/.local/share/apibara/bin/apibara run --allow-env=.env src/indexers/withdraw_queue/withdrawQueue.ts --sink-id=relayer::withdraw_queue --status-server-address=0.0.0.0:4140'
 directory=/app
 autostart=true
 autorestart=true
