--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "react-dom": "^19.1.0",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
-    "starknet": "^6.11.0",
+    "starknet": "7.6.4",
     "ts-node": "^10.9.2",
     "tslib": "2.8.1",
     "type-graphql": "2.0.0-rc.2",
