--- a/package.json
+++ b/package.json
@@ -40,16 +40,17 @@
   "dependencies": {
     "@apibara/protocol": "0.4.9",
     "@apibara/starknet": "0.4.0",
-    "@apollo/client": "^3.13.8",
+    "@apollo/client": "3.13.8",
     "@apollo/server": "4.11.0",
     "@avnu/avnu-sdk": "^3.0.0",
+    "@endur/sdk": "github:Endur-fi/endur-sdk-ts",
     "@nestjs/common": "10.4.1",
     "@nestjs/core": "10.4.1",
     "@nestjs/platform-express": "10.4.1",
     "@nestjs/schedule": "4.1.1",
     "@prisma/client": "5.22.0",
     "@scure/starknet": "^1.1.2",
-    "@strkfarm/sdk": "^1.0.44",
+    "@strkfarm/sdk": "1.0.44",
     "assert": "^2.1.0",
     "axios": "^1.9.0",
     "bignumber.js": "^9.3.0",
@@ -62,8 +63,8 @@
     "graphql-scalars": "1.23.0",
     "moment": "^2.30.1",
     "p-limit": "^3.1.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
     "starknet": "7.6.4",
