--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "babel-jest": "^29.7.0",
+    "drizzle-prisma-generator": "^0.1.7",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.32.0",
@@ -38,8 +39,10 @@
     "typescript-eslint": "7.6.0"
   },
   "dependencies": {
-    "@apibara/protocol": "0.4.9",
-    "@apibara/starknet": "0.4.0",
+    "@apibara/indexer": "2.1.0-beta.39",
+    "@apibara/plugin-drizzle": "2.1.0-beta.39",
+    "@apibara/protocol": "2.1.0-beta.39",
+    "@apibara/starknet": "2.1.0-beta.39",
     "@apollo/client": "3.13.8",
     "@apollo/server": "4.11.0",
     "@avnu/avnu-sdk": "^3.0.0",
@@ -51,11 +54,13 @@
     "@prisma/client": "5.22.0",
     "@scure/starknet": "^1.1.2",
     "@strkfarm/sdk": "1.0.44",
+    "apibara": "2.1.0-beta.39",
     "assert": "^2.1.0",
     "axios": "^1.9.0",
     "bignumber.js": "^9.3.0",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.44.5",
     "ethers": "^6.13.4",
     "express": "^4.21.1",
     "graphql": "16.9.0",
@@ -63,6 +68,7 @@
     "graphql-scalars": "1.23.0",
     "moment": "^2.30.1",
     "p-limit": "^3.1.0",
+    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "redis": "^5.5.6",
@@ -71,7 +77,8 @@
     "ts-node": "^10.9.2",
     "tslib": "2.8.1",
     "type-graphql": "2.0.0-rc.2",
-    "typegraphql-prisma": "0.28.0"
+    "typegraphql-prisma": "0.28.0",
+    "types@next": "link:apibara/types@next"
   },
   "name": "relayer",
   "version": "1.0.0",
