--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nestjs/schedule": "4.1.1",
     "@prisma/client": "5.22.0",
     "@scure/starknet": "^1.1.2",
+    "@strkfarm/sdk": "1.1.8",
     "apibara": "2.1.0-beta.39",
     "assert": "^2.1.0",
     "axios": "^1.9.0",
