--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "babel-jest": "^29.7.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.32.0",
     "jest": "^29.7.0",
@@ -43,6 +43,7 @@
     "@apollo/client": "^3.13.8",
     "@apollo/server": "4.11.0",
     "@avnu/avnu-sdk": "^3.0.0",
+    "@hemantwasthere/monitoring-sdk": "^3.2.9",
     "@nestjs/common": "10.4.1",
     "@nestjs/core": "10.4.1",
     "@nestjs/platform-express": "10.4.1",
