--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@apollo/server": "4.11.0",
     "@avnu/avnu-sdk": "^3.0.0",
     "@endur/sdk": "github:Endur-fi/endur-sdk-ts",
+    "@hemantwasthere/monitoring-sdk": "^3.2.9",
     "@nestjs/common": "10.4.1",
     "@nestjs/core": "10.4.1",
     "@nestjs/platform-express": "10.4.1",
